--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -18,7 +18,13 @@
 
 
 
-    <div class="image-container"></div>
+    
+      <picture>
+        <source srcset="./images/image-product-desktop.jpg" media="(min-width: 600px)">
+        <source srcset="./images/image-product-mobile.jpg">
+        <img src="./images/image-product-desktop.jpg" alt="A perfume bottle in a table with a leaf near">
+      </picture>
+    
 
     <div class="Content">
             <div class="top">
@@ -34,9 +40,11 @@
         <p class="offer-price">
           $149.99
         </p>
+        <del aria-label="Old price">
         <p class="realPrice">
           $169.99
         </p>
+      </del>
             </div>
       <button class="button bota" value="Add to Cart">
          <img src="./images/icon-cart.svg" alt="add to cart image">
