--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -17,7 +17,7 @@
   <main>
 
 
-
+    <div class="full-content">
     
       <picture>
         <source srcset="./images/image-product-desktop.jpg" media="(min-width: 600px)">
@@ -52,7 +52,7 @@
           </button>
     </div>
     
-
+  </div>
 
     <footer>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
