--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -29,12 +29,12 @@
     </div>
   </div>
     <div class="ncont">
-      <p class="eth"> <img src="./images/icon-ethereum.svg" alt="Ethereum icon for price"> 0.041 ETH</p>
-      <p> <img src="./images/icon-clock.svg" alt="clock icon"> 3 days left</p>
+      <p class="eth"> <img src="./images/icon-ethereum.svg" alt="" aria-hidden="true"> 0.041 ETH</p>
+      <p> <img src="./images/icon-clock.svg" alt="" aria-hidden="true"> 3 days left</p>
     </div>
   
     <hr>
-    <p class="avatar"><img src="./images/image-avatar.png" alt="avatar of creator"> Creation of <span class="OverCh"> Jules
+    <p class="avatar"><img src="./images/image-avatar.png" alt="" aria-hidden="true"> Creation of <span class="OverCh"> Jules
         Wyvern</span></p>
 
   </main>
