--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -80,7 +80,7 @@
     <footer>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/Toxgem">ToxGem</a>.
-    <footer>
+    </footer>
 </body>
 
 </html>
