--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-
+<main>
   <!-- Rating state start -->
   <div class="container">
 
     
 
     <div class="evaluation">
-      <span><img src="./images/icon-star.svg" alt="" class="star"></span>
+      <span><img src="./images/icon-star.svg" alt="" class="star"/></span>
       <h1>How did we do?</h1>
 
       <p>Please let us know how we did with your support request. All feedback is appreciated
@@ -73,7 +73,7 @@
 </div>
     <!-- Thank you state end -->
 
-
+  </main>
 
     <script src="./main.js"></script>
 
