--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -20,7 +20,7 @@
 
     <div class="evaluation">
       <span><img src="./images/icon-star.svg" alt="" class="star"/></span>
-      <h1>How did we do?</h1>
+      <h1> How did we do? </h1>
 
       <p>Please let us know how we did with your support request. All feedback is appreciated
         to help us improve our offering!</p>
@@ -59,7 +59,7 @@
 
       <!-- Thank you state start -->
       <div class="thanks">
-        <img src="./images/illustration-thank-you.svg" alt="">
+        <img src="./images/illustration-thank-you.svg" alt=""/>
         <span class="rating"> You selected <span id="rating"></span> out of 5</span>
 
         <h1>Thank you!</h1>
@@ -73,10 +73,10 @@
 </div>
     <!-- Thank you state end -->
 
-  </main>
+ 
 
     <script src="./main.js"></script>
-
+  </main>
     <footer>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/Toxgem">ToxGem</a>.
